<resources>
    <string name="app_name">Guess</string>
    <string name="please_enter_number">Please enter a number(1~10)</string>
    <string name="ok">OK</string>
    <string name="bigger">bigger</string>
    <string name="smaller">smaller</string>
    <string name="yes">YES</string>
    <string name="dialog_title">Message</string>
    <string name="title_activity_material">MaterialActivity</string>

    <string name="replay_game">Replay game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="bingo">Excellent! The number is</string>

</resources>
